clusters/building-blocks/other/apps/whoami/app/whoami-deploy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: default
  labels:
    app.kubernetes.io/name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          securityContext:
            allowPrivilegeEscalation: false # Prevent privilege escalation
            capabilities:
              drop:
                - "ALL"
            # runAsNonRoot: true # Ensure the container runs as non-root
            seccompProfile: # Drop all capabilities
              type: RuntimeDefault # Use the default seccomp profile
