clusters/building-blocks/other/apps/whoami/app/whoami-svc.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
