clusters/building-blocks/other/apps/whoami/app/whoami-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: default
spec:
  parentRefs:
    - name: envoy-home
      namespace: network
  hostnames:
    - "whoami.home.${DOMAIN_NAME}"
  rules:
    - backendRefs:
        - name: whoami
          port: 80
